# Brain-games

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: bg_module.py  cli.py  game_gears.py  game_logics.py  gears.py  logic.py
brain_games/games/: game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
